--- a/Share Extension/ShareExtend/Base.lproj/MainInterface.storyboard
+++ b/Share Extension/ShareExtend/Base.lproj/MainInterface.storyboard
@@ -12,7 +12,7 @@
         <!--Share View Controller-->
         <scene sceneID="ceB-am-kn3">
             <objects>
-                <viewController id="j1y-V4-xli" customClass="ShareViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="j1y-V4-xli" customClass="ShareViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jn9-J2-Mce"/>
                         <viewControllerLayoutGuide type="bottom" id="wYV-2n-oGD"/>
